[gd_scene load_steps=3 format=2]

[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Subs/FTQ_CustomLabel/FTQ_CustomLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/WSSS0202_EndingPanel/Subs/WSSS0202_EP_Scene01/WSSS0202_EP_Scene01.gd" type="Script" id=2]

[node name="WSSS0202_EP_Scene01" type="Control"]
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 2 )

[node name="FTQ_Line01" parent="." instance=ExtResource( 1 )]
margin_left = 99.0
margin_top = 83.0
margin_right = 859.0
margin_bottom = 123.0
default_font_size = 20

[node name="FTQ_Line02" parent="." instance=ExtResource( 1 )]
margin_left = 25.0
margin_top = 244.0
margin_right = 785.0
margin_bottom = 284.0
default_font_size = 20

[node name="FTQ_Line03" parent="." instance=ExtResource( 1 )]
margin_left = 150.0
margin_top = 387.0
margin_right = 910.0
margin_bottom = 427.0
default_font_size = 20
